# eu4-save-helper

./: Cargo.toml
auto-paradox/: Cargo.toml
auto-paradox/src/: lib.rs
eu4/: Cargo.toml
eu4/src/: advisors.rs  conditions.rs  country.rs  culture.rs  effects.rs  events.rs  game.rs  gamestate.rs  lib.rs  misc.rs  modifiers.rs  religion.rs  scope.rs  trade.rs
paradox/: Cargo.toml
paradox-derive/: Cargo.toml
paradox-derive/src/: game.rs  lib.rs  scopes.rs  tables.rs
paradox/examples/: ironmelt.rs
paradox/src/: binary_tokens.rs  date.rs  fixed.rs  game.rs  interning.rs  lexer.rs  lib.rs  parser.rs  parser_impl.rs  save.rs  specials.rs  values.rs
src/: date.rs  eu4.rs  events.rs  fixed.rs  game.rs  gamestate.rs  lexer.rs  main.rs  trade.rs
src/eu4/: conditions.rs
