[package]
name = "eu4-save-helper"
version = "0.1.0"
authors = ["Joshua Cranmer <Pidgeot18@gmail.com>"]
edition = "2018"

[dependencies]
paradox = { path = "paradox" }
eu4 = { path = "eu4" }

[dependencies.zip]
version = "0.5"
default-features = false
features = ["deflate"]

[workspace]
members = [
    "eu4",
    "paradox",
    "paradox-derive"
]
