[package]
name = "eu4"
version = "0.1.0"
authors = ["Joshua Cranmer <Pidgeot18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paradox = { path = "../paradox" }
paradox-derive = { path = "../paradox-derive" }
string_cache = "0.8"

[build-dependencies]
string_cache_codegen = "0.5"
