[package]
name = "paradox"
version = "0.1.0"
authors = ["Joshua Cranmer <Pidgeot18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.0"
dirs = "2.0"
string_cache = "0.8"
thiserror = "1.0"
paradox-derive = { path = "../paradox-derive" }

[dependencies.zip]
version = "0.5"
default-features = false
features = ["deflate"]
